# vidlizer

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  demo.tape  env.sample  glama.json  pyproject.toml  pytest.ini  sample-output.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
scripts/: release.sh  smoke.py
tests/: conftest.py  test_batch.py  test_cache.py  test_cli.py  test_dedup.py  test_detect.py  test_downloader.py  test_formatter.py  test_frames.py  test_http.py  test_image.py  test_models.py  test_pdf.py  test_pipeline.py  test_preflight.py  test_transcribe.py  test_usage.py  test_youtube.py
vidlizer/: __init__.py  batch.py  bootstrap.py  cache.py  cli.py  core.py  dedup.py  detect.py  downloader.py  formatter.py  frames.py  http.py  models.py  preflight.py  transcribe.py  usage.py
vidlizer/mcp/: server.py  store.py
