[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vidlizer"
version = "0.2.19"
description = "Point it at a video, image, or PDF — get structured JSON. Runs local (Ollama, LM Studio, oMLX) or cloud (OpenRouter). CLI + MCP server for Claude Code, Cursor, and Claude Desktop."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Rizawan Ahmed", email = "ahm.rizawan@gmail.com" }]
keywords = ["video", "analysis", "ai", "vision", "json", "llm", "ollama", "openrouter", "mcp", "ffmpeg", "multimodal", "omlx", "lm-studio", "apple-silicon"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "requests>=2.32",
    "python-dotenv>=1.0",
    "questionary>=2.0",
    "rich>=13.0",
    "pymupdf>=1.24",
    "yt-dlp>=2024.1",
    "mlx-whisper>=0.4; sys_platform == 'darwin'",
]

[project.optional-dependencies]
transcribe = ["mlx-whisper>=0.4"]
mcp = ["mcp>=1.0"]
dev = [
    "pytest>=8.0",
    "pytest-html>=4.0",
    "pytest-mock>=3.12",
]

[project.urls]
Homepage = "https://github.com/arizawan/vidlizer"
Repository = "https://github.com/arizawan/vidlizer"
"Bug Tracker" = "https://github.com/arizawan/vidlizer/issues"
Changelog = "https://github.com/arizawan/vidlizer/releases"
Funding = "https://buymeacoffee.com/arizawan"
Author = "https://arizawan.com"
Company = "https://theatechsolutions.com"

[project.scripts]
vidlizer = "vidlizer.cli:main"
vidlizer-mcp = "vidlizer.mcp.server:main"

[tool.ruff.lint]
ignore = ["E701"]  # allow aligned inline-if blocks

[tool.setuptools.packages.find]
where = ["."]
include = ["vidlizer*"]

[tool.setuptools.package-data]
vidlizer = ["env.sample"]
